@@ -702,7 +702,7 @@ Now assume that $C$ is an orthonormal set.  Let $\vect{y}$ be an arbitrary vecto
 <![CDATA[&=\sum_{i=1}^{n}\innerproduct{\vect{x}_i}{\adjoint{A}A\vect{y}}\vect{x}_i]]>
 <![CDATA[&&]]>\text{<acroref type="theorem" acro="COB" />}\\
 <![CDATA[&=\sum_{i=1}^{n}\innerproduct{\vect{x}_i}{\adjoint{A}A\sum_{j=1}^{n}a_j\vect{x}_j}\vect{x}_i]]>
-<![CDATA[&&]]>\text{<acroref type="definition" acro="TSVS" />}\\
+<![CDATA[&&]]>\text{<acroref type="definition" acro="SSVS" />}\\
 <![CDATA[&=\sum_{i=1}^{n}\innerproduct{\vect{x}_i}{\sum_{j=1}^{n}\adjoint{A}Aa_j\vect{x}_j}\vect{x}_i]]>
 <![CDATA[&&]]>\text{<acroref type="theorem" acro="MMDAA" />}\\
 <![CDATA[&=\sum_{i=1}^{n}\innerproduct{\vect{x}_i}{\sum_{j=1}^{n}a_j\adjoint{A}A\vect{x}_j}\vect{x}_i]]>
@@ -1168,7 +1168,7 @@ Then,
 <![CDATA[&=A\vect{w}]]>
 <![CDATA[&&]]>\text{<acroref type="theorem" acro="SLEMM" />}\\
 <![CDATA[&=A\left(\lincombo{b}{x}{n}\right)]]>
-<![CDATA[&&]]>\text{<acroref type="definition" acro="TSVS" />}\\
+<![CDATA[&&]]>\text{<acroref type="definition" acro="SSVS" />}\\
 <![CDATA[&=]]>
 Ab_1\vect{x}_1+
 Ab_2\vect{x}_2+
@@ -1184,7 +1184,7 @@ b_3A\vect{x}_3+
 b_nA\vect{x}_n
 <![CDATA[&&]]>\text{<acroref type="theorem" acro="MMSMM" />}
 </alignmath>
-So we can write an arbitrary vector of $\complex{n}$ as a linear combination of the elements of $C$.  In other words, $C$ spans $\complex{n}$ (<acroref type="definition" acro="TSVS" />).  By <acroref type="definition" acro="B" />, the set $C$ is a basis for $\complex{n}$.<br /><br />
+So we can write an arbitrary vector of $\complex{n}$ as a linear combination of the elements of $C$.  In other words, $C$ spans $\complex{n}$ (<acroref type="definition" acro="SSVS" />).  By <acroref type="definition" acro="B" />, the set $C$ is a basis for $\complex{n}$.<br /><br />
 $\left(\Leftarrow\right)$\quad  Assume that $C$ is a basis and prove that $A$ is nonsingular.  Let $\vect{x}$ be a solution to the homogeneous system $\homosystem{A}$.  Since $B$ is a basis of $\complex{n}$ there are  scalars, $\scalarlist{a}{n}$, such that
 <alignmath>
 <![CDATA[\vect{x}&=\lincombo{a}{x}{n}]]>
@@ -1195,7 +1195,7 @@ Then
 <![CDATA[&=A\vect{x}]]>
 <![CDATA[&&]]>\text{<acroref type="theorem" acro="SLEMM" />}\\
 <![CDATA[&=A\left(\lincombo{a}{x}{n}\right)]]>
-<![CDATA[&&]]>\text{<acroref type="definition" acro="TSVS" />}\\
+<![CDATA[&&]]>\text{<acroref type="definition" acro="SSVS" />}\\
 <![CDATA[&=]]>
 Aa_1\vect{x}_1+
 Aa_2\vect{x}_2+
