@@ -74,7 +74,7 @@
 <alignmath>
 <![CDATA[&\lincombo{c}{u}{m}\\]]>
 <![CDATA[&=c_{1}\left(a_{11}\vect{v}_1+a_{21}\vect{v}_2+a_{31}\vect{v}_3+\cdots+a_{t1}\vect{v}_t\right)]]>
-<![CDATA[&&]]>\text{<acroref type="definition" acro="TSVS" />}\\
+<![CDATA[&&]]>\text{<acroref type="definition" acro="SSVS" />}\\
 <![CDATA[&\quad\quad+c_{2}\left(a_{12}\vect{v}_1+a_{22}\vect{v}_2+a_{32}\vect{v}_3+\cdots+a_{t2}\vect{v}_t\right)\\]]>
 <![CDATA[&\quad\quad+c_{3}\left(a_{13}\vect{v}_1+a_{23}\vect{v}_2+a_{33}\vect{v}_3+\cdots+a_{t3}\vect{v}_t\right)\\]]>
 <![CDATA[&\quad\quad\quad\quad\vdots\\]]>
@@ -127,7 +127,7 @@
 <alignmath>
 \sum_{j=1}^{m}c_{j}\vect{u}_j
 <![CDATA[&=\sum_{j=1}^{m}c_{j}\left(\sum_{i=1}^{t}a_{ij}\vect{v_i}\right)]]>
-<![CDATA[&&]]>\text{<acroref type="definition" acro="TSVS" />}\\
+<![CDATA[&&]]>\text{<acroref type="definition" acro="SSVS" />}\\
 <![CDATA[&=\sum_{j=1}^{m}\sum_{i=1}^{t}c_{j}a_{ij}\vect{v}_i]]>
 <![CDATA[&&]]>\text{<acroref type="property" acro="DVA" />}\\
 <![CDATA[&=\sum_{i=1}^{t}\sum_{j=1}^{m}c_{j}a_{ij}\vect{v}_i]]>
@@ -1038,7 +1038,7 @@ R=\set{
 \end{bmatrix}
 }
 </equation>
-is a spanning set for $UT_2$ (<acroref type="definition" acro="TSVS" />).  Is $R$ is linearly independent?  If so, it is a basis for $UT_2$.  So consider a relation of linear dependence on $R$,
+is a spanning set for $UT_2$ (<acroref type="definition" acro="SSVS" />).  Is $R$ is linearly independent?  If so, it is a basis for $UT_2$.  So consider a relation of linear dependence on $R$,
 <equation>
 \alpha_1
 \begin{bmatrix}
