@@ -772,7 +772,7 @@ and this establishes that $R$ is a linearly independent set.</p>
 <![CDATA[&=\lt{T}{\vect{u}}]]>
 <![CDATA[&&]]>\text{<acroref type="definition" acro="KLT" />}\\
 <![CDATA[&=\lt{T}{\lincombo{a}{u}{m}}]]>
-<![CDATA[&&]]>\text{<acroref type="definition" acro="TSVS" />}\\
+<![CDATA[&&]]>\text{<acroref type="definition" acro="SSVS" />}\\
 <![CDATA[&=a_1\lt{T}{\vect{u}_1}+a_2\lt{T}{\vect{u}_2}+a_3\lt{T}{\vect{u}_3}+\cdots+a_m\lt{T}{\vect{u}_m}]]>
 <![CDATA[&&]]>\text{<acroref type="theorem" acro="LTLC" />}
 </alignmath>
