@@ -358,9 +358,9 @@ which becomes the homogeneous system
 
 <p>Because we will use terms like <q>spanned by</q> and <q>spanning set,</q> there is the potential for confusion with <q>the span.</q>  Come back and reread the first paragraph of this subsection whenever you are uncertain about the difference.  Here's the working definition.</p>
 
-<definition acro="TSVS" index="spanning set">
-<title>To Span a Vector Space</title>
-<p>Suppose $V$ is a vector space.  A subset $S$ of $V$ is a <define>spanning set</define> for $V$ if $\spn{S}=V$.  In this case, we also say $S$ <define>spans</define> $V$.</p>
+<definition acro="SSVS" index="spanning set">
+<title>Spanning Set of a Vector Space</title>
+<p>Suppose $V$ is a vector space.  A subset $S$ of $V$ is a <define>spanning set</define> of $V$ if $\spn{S}=V$.  In this case, we also frequently say $S$ <define>spans</define> $V$.</p>
 
 </definition>
 
@@ -429,7 +429,7 @@ as a condition on $r$.</p>
 </equation>
 </p>
 
-<p>For your results to match our first matrix, you may find it necessary to multiply the final row of your row-reduced matrix by the appropriate scalar, and/or add multiples of this row to some of the other rows.  To obtain the second version of the matrix, the last entry of the last column has been simplified to zero according to the one condition we were able to impose on an arbitrary polynomial from $W$.    So with no leading 1's in the last column, <acroref type="theorem" acro="RCLS" /> tells us this system is consistent.  Therefore, <em>any</em> polynomial from $W$ can be written as a linear combination of the polynomials in $S$, so $W\subseteq\spn{S}$. Therefore,  $W=\spn{S}$ and $S$ is a spanning set for $W$ by <acroref type="definition" acro="TSVS" />.</p>
+<p>For your results to match our first matrix, you may find it necessary to multiply the final row of your row-reduced matrix by the appropriate scalar, and/or add multiples of this row to some of the other rows.  To obtain the second version of the matrix, the last entry of the last column has been simplified to zero according to the one condition we were able to impose on an arbitrary polynomial from $W$.    So with no leading 1's in the last column, <acroref type="theorem" acro="RCLS" /> tells us this system is consistent.  Therefore, <em>any</em> polynomial from $W$ can be written as a linear combination of the polynomials in $S$, so $W\subseteq\spn{S}$. Therefore,  $W=\spn{S}$ and $S$ is a spanning set for $W$ by <acroref type="definition" acro="SSVS" />.</p>
 
 <p>Notice that an alternative to row-reducing the augmented matrix by hand would be to appeal to <acroref type="theorem" acro="FS" /> by expressing the column space of the coefficient matrix as a null space, and then verifying that the condition on $r$ guarantees that $r$ is in the column space, thus implying that the system is always consistent.  Give it a try, we'll wait.  This has been a complicated example, but worth studying carefully.</p>
 
@@ -489,7 +489,7 @@ Q=\set{
 <![CDATA[\begin{bmatrix}1&0\\-4&1\end{bmatrix}]]>
 }
 </equation>
-spans $Z$ by <acroref type="definition" acro="TSVS" />.</p>
+spans $Z$ by <acroref type="definition" acro="SSVS" />.</p>
 
 </example>
 
@@ -552,7 +552,7 @@ which becomes the linear system with a matrix representation
 </alignmath>
 </p>
 
-<p>This final sequence of computations in $C$ is sufficient to demonstrate that any element of $C$ <em>can</em> be written (or expressed) as a linear combination of the two vectors in $R$, so $C\subseteq\spn{R}$.  Since the reverse inclusion $\spn{R}\subseteq C$ is trivially true, $C=\spn{R}$ and we say $R$ spans $C$ (<acroref type="definition" acro="TSVS" />).  Notice that this demonstration is no more or less valid if we hide from the reader our scratchwork that suggested $a_1=4x-7y-3$ and $a_2=-x+2y+1$.</p>
+<p>This final sequence of computations in $C$ is sufficient to demonstrate that any element of $C$ <em>can</em> be written (or expressed) as a linear combination of the two vectors in $R$, so $C\subseteq\spn{R}$.  Since the reverse inclusion $\spn{R}\subseteq C$ is trivially true, $C=\spn{R}$ and we say $R$ spans $C$ (<acroref type="definition" acro="SSVS" />).  Notice that this demonstration is no more or less valid if we hide from the reader our scratchwork that suggested $a_1=4x-7y-3$ and $a_2=-x+2y+1$.</p>
 
 </example>
 
@@ -570,7 +570,7 @@ which becomes the linear system with a matrix representation
 <equation>
 S=\set{\colvector{-7\\5\\1},\,\colvector{-6\\5\\0},\,\colvector{-12\\7\\4}}
 </equation>
-from the vector space $\complex{3}$.  Let $A$ be the matrix whose columns are the set $S$, and verify that $A$ is nonsingular.  By <acroref type="theorem" acro="NMLIC" /> the elements of $S$ form a linearly independent set.  Suppose that $\vect{b}\in\complex{3}$.  Then $\linearsystem{A}{\vect{b}}$ has a (unique) solution (<acroref type="theorem" acro="NMUS" />) and hence is consistent.  By <acroref type="theorem" acro="SLSLC" />, $\vect{b}\in\spn{S}$.  Since $\vect{b}$ is arbitrary, this is enough to show that $\spn{S}=\complex{3}$, and therefore $S$ is a spanning set for $\complex{3}$ (<acroref type="definition" acro="TSVS" />).  (This set comes from the columns of the coefficient matrix of <acroref type="archetype" acro="B" />.)</p>
+from the vector space $\complex{3}$.  Let $A$ be the matrix whose columns are the set $S$, and verify that $A$ is nonsingular.  By <acroref type="theorem" acro="NMLIC" /> the elements of $S$ form a linearly independent set.  Suppose that $\vect{b}\in\complex{3}$.  Then $\linearsystem{A}{\vect{b}}$ has a (unique) solution (<acroref type="theorem" acro="NMUS" />) and hence is consistent.  By <acroref type="theorem" acro="SLSLC" />, $\vect{b}\in\spn{S}$.  Since $\vect{b}$ is arbitrary, this is enough to show that $\spn{S}=\complex{3}$, and therefore $S$ is a spanning set for $\complex{3}$ (<acroref type="definition" acro="SSVS" />).  (This set comes from the columns of the coefficient matrix of <acroref type="archetype" acro="B" />.)</p>
 
 <p>Now examine the situation for a particular choice of $\vect{b}$, say $\vect{b}=\colvector{-33\\24\\5}$.  Because $S$ is a spanning set for $\complex{3}$, we know we can write $\vect{b}$ as a linear combination of the vectors in $S$,
 <equation>
@@ -595,7 +595,7 @@ from the vector space $\complex{3}$.  Let $A$ be the matrix whose columns are th
 </statement>
 
 <proof>
-<p>That $\vect{w}$ can be written as a linear combination of the vectors in $B$ follows from the spanning property of the set (<acroref type="definition" acro="TSVS" />).  This is good, but not the meat of this theorem.  We now know that for any choice of the vector $\vect{w}$ there exist <em>some</em> scalars that will create $\vect{w}$ as a linear combination of the basis vectors.  The real question is:  Is there <em>more</em> than one way to write $\vect{w}$ as a linear combination of $\{\vectorlist{v}{m}\}$?  Are the scalars $a_1,\,a_2,\,a_3,\,\ldots,\,a_m$ unique?  (<acroref type="technique" acro="U" />)</p>
+<p>That $\vect{w}$ can be written as a linear combination of the vectors in $B$ follows from the spanning property of the set (<acroref type="definition" acro="SSVS" />).  This is good, but not the meat of this theorem.  We now know that for any choice of the vector $\vect{w}$ there exist <em>some</em> scalars that will create $\vect{w}$ as a linear combination of the basis vectors.  The real question is:  Is there <em>more</em> than one way to write $\vect{w}$ as a linear combination of $\{\vectorlist{v}{m}\}$?  Are the scalars $a_1,\,a_2,\,a_3,\,\ldots,\,a_m$ unique?  (<acroref type="technique" acro="U" />)</p>
 
 <p>Assume there are two ways to express $\vect{w}$ as a linear combination of $\{\vectorlist{v}{m}\}$.  In other words there exist scalars $a_1,\,a_2,\,a_3,\,\ldots,\,a_m$ and $b_1,\,b_2,\,b_3,\,\ldots,\,b_m$ so that
 <alignmath>
@@ -1016,7 +1016,7 @@ Massaging the right side of this equation, according to the definitions of <acro
 }
 </alignmath>
 </problem>
-<solution contributor="robertbeezer">We want to show that $W=\spn{S}$ (<acroref type="definition" acro="TSVS" />), which is an equality of sets (<acroref type="definition" acro="SE" />).<br /><br />
+<solution contributor="robertbeezer">We want to show that $W=\spn{S}$ (<acroref type="definition" acro="SSVS" />), which is an equality of sets (<acroref type="definition" acro="SE" />).<br /><br />
 First, show that $\spn{S}\subseteq W$.  Begin by checking that each of the three matrices in $S$ is a member of the set $W$.  Then, since $W$ is a vector space, the closure properties (<acroref type="property" acro="AC" />, <acroref type="property" acro="SC" />) guarantee that every linear combination of elements of $S$ remains in $W$.<br /><br />
 Second, show that $W\subseteq\spn{S}$.    We want to convince ourselves that an arbitrary element of $W$ is a linear combination of elements of $S$.  Choose
 <equation>
