@@ -249,7 +249,7 @@ T\vect{w}=
 </proof>
 </theorem>
 
-<p>You might notice from studying the proof that the hypotheses of this theorem could be <q>weakened</q> (<ie />  made less restrictive).   We need only suppose the equality of the matrix-vector products for just the standard unit vectors (<acroref type="definition" acro="SUV" />) or any other spanning set (<acroref type="definition" acro="TSVS" />) of $\complex{n}$ (<acroref type="exercise" acro="LISS.T40" />).  However, in practice, when we apply this theorem the stronger hypothesis will be in effect so this version of the theorem will suffice for our purposes.  (If we changed the statement of the theorem to have the less restrictive hypothesis, then we would call the theorem <q>stronger.</q>)</p>
+<p>You might notice from studying the proof that the hypotheses of this theorem could be <q>weakened</q> (<ie />  made less restrictive).   We need only suppose the equality of the matrix-vector products for just the standard unit vectors (<acroref type="definition" acro="SUV" />) or any other spanning set (<acroref type="definition" acro="SSVS" />) of $\complex{n}$ (<acroref type="exercise" acro="LISS.T40" />).  However, in practice, when we apply this theorem the stronger hypothesis will be in effect so this version of the theorem will suffice for our purposes.  (If we changed the statement of the theorem to have the less restrictive hypothesis, then we would call the theorem <q>stronger.</q>)</p>
 
 <sageadvice acro="MVP" index="matrix-vector product">
 <title>Matrix-Vector Product</title>
