@@ -724,7 +724,7 @@ spans $\rng{T}$.</p>
 <alignmath>
 \vect{v}
 <![CDATA[&=\lt{T}{\vect{u}}&&]]>\text{<acroref type="definition" acro="RLT" />}\\
-<![CDATA[&=\lt{T}{\lincombo{a}{u}{t}}&&]]>\text{<acroref type="definition" acro="TSVS" />}\\
+<![CDATA[&=\lt{T}{\lincombo{a}{u}{t}}&&]]>\text{<acroref type="definition" acro="SSVS" />}\\
 <![CDATA[&=a_1\lt{T}{\vect{u}_1}+a_2\lt{T}{\vect{u}_2}+a_3\lt{T}{\vect{u}_3}+\ldots+a_t\lt{T}{\vect{u}_t}&&]]>\text{<acroref type="theorem" acro="LTLC" />}\\
 </alignmath>
 which establishes that $\vect{v}\in\spn{R}$ (<acroref type="definition" acro="SS" />).  So $\rng{T}\subseteq\spn{R}$.</p>
@@ -738,7 +738,7 @@ which establishes that $\vect{v}\in\spn{R}$ (<acroref type="definition" acro="SS
 </alignmath>
 </p>
 
-<p>This demonstrates that $\vect{v}$ is an output of the linear transformation $T$, so $\vect{v}\in\rng{T}$.  Therefore $\spn{R}\subseteq\rng{T}$, so we have the set equality $\rng{T}=\spn{R}$ (<acroref type="definition" acro="SE" />).  In other words, $R$ spans $\rng{T}$ (<acroref type="definition" acro="TSVS" />).</p>
+<p>This demonstrates that $\vect{v}$ is an output of the linear transformation $T$, so $\vect{v}\in\rng{T}$.  Therefore $\spn{R}\subseteq\rng{T}$, so we have the set equality $\rng{T}=\spn{R}$ (<acroref type="definition" acro="SE" />).  In other words, $R$ spans $\rng{T}$ (<acroref type="definition" acro="SSVS" />).</p>
 
 </proof>
 </theorem>
