@@ -4,6 +4,7 @@ New:  Diagrams NSLT, SLT (surjective linear transformations)
 New:  Diagrams KPI, IVLT (pre-images, invertible linear transformations)
 New:  Diagram KRI (kernel and range isomorphisms)
 Change:  Replaced Definition RR by an informal discussion
+Change:  Definition TSVS renamed as Definition SSVS
 Typo:  Proof of Theorem SLSLC: Doubled text macro in source (Glenna Toomey)
 Typo:  Solution S.T30: Corrected bolding on 'Proof' (Glenna Toomey)
 
